Footer & Spacing Fixed
Need to align <H1>Dream Team  centre of header

--- a/src/Sass/styles.sass
+++ b/src/Sass/styles.sass
@@ -1,10 +1,11 @@
 html
-    background: #2b2b2b
+    background: #1e1e1e
     h2
         font-family: Avenir
     h1
         font-family: Basketball 
         color: white
+        letter-spacing: 2px
 
     @font-face 
         font-family:Basketball 
@@ -24,8 +25,9 @@ html
     width: 100vw
     height: 15vh
     // background: #818181
-    background: 464646
+    // background: #464646
     // background: red
+    
     display: inline-flex
     flex-direction: row
     flex-wrap: nowrap
@@ -54,9 +56,9 @@ html
 // Section 2
 .vertNavBar
     width: 20%
-    height: 85vh
-    background: 464646
-    background: green
+    height: 80vh
+    // background: #464646
+    // background: green
     display: flex
     flex-direction: column
     justify-content: stretch
@@ -97,9 +99,9 @@ html
 // Section 3/ main container
 .mainContent
     width: 80%
-    height: 85vh
-    background: #818181
-    // background: 464646
+    height: 80vh
+    // background: #818181
+    // background: #464646
     float: left
 
 
@@ -107,7 +109,7 @@ html
     .leagueLeadersContainer
         width: 100%
         height: 22vh
-        background: blue
+        // background: blue
         
         .leagueLeadersText
             margin: 10px 0px
@@ -125,7 +127,7 @@ html
             overflow: auto
             white-space:nowrap
             // background: #D9D9D9
-            background: 464646
+            // background: 464646
             float: left
 
         .cardContainer
@@ -139,7 +141,7 @@ html
         .cardSpacer
             width: 35px
             height: 100%
-            background: red
+            // background: red
             float: left
 
 
@@ -150,7 +152,7 @@ html
     height: 18vh
     padding-top: 10px
     // background: #818181
-    background: red
+    // background: red
     float: left
 
     .introHeading
@@ -172,13 +174,13 @@ html
 .chartsContainer
     width: 100%
     height: 38vh
-    background: blue
+    // background: blue
     float: left
 
     .chartOneContainer
         width: 70%
         height: 100%
-        background: #464646
+        // background: #464646
         display: flex
         justify-content: center
         align-items: center
@@ -192,7 +194,7 @@ html
     .chartTwoContainer
         width: 30%
         height: 100%
-        background: green
+        // background: green
         display: flex
         justify-content: center
         align-items: center
@@ -209,4 +211,10 @@ html
     width: 100%
     height: 6vh
     background: black
+    display: flex
+    justify-content: center
+    align-items: center
     float: left
+
+    .footerDetails
+        color: white
